--- a/core/templates/home/index.html
+++ b/core/templates/home/index.html
@@ -14,6 +14,21 @@
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       text-align: center;
     }
+    table {
+      border: none;
+      background-color: rgb(76, 76, 76);
+      border-radius: 20px;
+      padding: 10px;
+      margin: 5px;
+      text-align: center;
+    }
+
+    td {
+      border: none;
+      border-radius: 5px;
+      background-color: rgb(40, 39, 39);
+      padding: 15px;
+    }
   </style>
   <body>
     <h1>DJANGO</h1>
@@ -25,5 +40,22 @@
       on writing your app without needing to reinvent the wheel. It’s free and
       open source.
     </p>
+    {{peoples}}
+    <table>
+      <th>No.</th>
+      <th>Name</th>
+      <th>Age</th>
+      <th>Role</th>
+      <th>Can Vote</th>
+      {% for people in peoples %}
+      <tr>
+        <td>{{forloop.counter}}</td>
+        <td>{{people.name}}</td>
+        <td>{{people.age}}</td>
+        <td>{{people.role}}</td>
+        <td>{% if people.age >= 18 %} 👍 {% else %} 👎 {% endif %}</td>
+      </tr>
+      {% endfor %}
+    </table>
   </body>
 </html>
