--- a/core/templates/home/index.html
+++ b/core/templates/home/index.html
@@ -57,5 +57,15 @@
       </tr>
       {% endfor %}
     </table>
+    {% if "Caveg" in veg %}
+    <p>Yess Available</p>
+    {% else %}
+    <p>Not Available</p>
+    {% endif %}
+
+    <div>
+      <a href="/about/">About >></a><br>
+      <a href="/contact/">Contact >></a>
+    </div>
   </body>
 </html>
