--- a/DemoApp/practice/templates/home/contact.html
+++ b/DemoApp/practice/templates/home/contact.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
 {% block start %}
-<body><h1>Hello World</h1></body>
+<body>
+<h1>This is a contact page.</h1>
+</body>
 {% endblock %}
