--- a/DemoApp/practice/templates/base.html
+++ b/DemoApp/practice/templates/base.html
@@ -5,6 +5,11 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>{{ page }}</title>
 </head>
+<style>
+     body{
+          font-family: Arial, Helvetica, sans-serif;
+     }
+</style>    
 {% block start %}
 {% endblock %}
 </html>
