--- a/Crud-operation-django/core/templates/home/index.html
+++ b/Crud-operation-django/core/templates/home/index.html
@@ -1,27 +1,37 @@
 {% extends "base.html" %}
 {% block start %}
-<body>
-     <form action="" class="col-6 mx-auto card py-5 px-5 mt-5 shadow-sm" method="post" enctype="multipart/form-data">
+
+
+     <form action="{% url 'index' %}" class="col-6 mx-auto card py-5 px-5 mt-5 shadow-sm" method="post" enctype="multipart/form-data">
           {% csrf_token %}
           <h3>Add recipes</h3>
           <hr>
-          {% for field in form %}
-            <div class="mb-3">
-                {{ field.label_tag }}
-                {{ field }}
-                {% if field.help_text %}
-                    <small class="form-text text-muted">{{ field.help_text }}</small>
-                {% endif %}
-                {% if field.errors %}
-                    <ul class="errorlist">
-                        {% for error in field.errors %}
-                            <li>{{ error }}</li>
-                        {% endfor %}
-                    </ul>
-                {% endif %}
-            </div>
-          {% endfor %}
+          <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Recipe name</label>
+            <input type="text" class="form-control" name="recipe_name" id="exampleFormControlInput1" value="{{ recipe_name }}">
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">Recipe description</label>
+            <textarea class="form-control" name="recipe_desc" id="exampleFormControlTextarea1" rows="3">{{ recipe_desc }}</textarea>
+          </div>
         <input type="submit" value="Add Recipe" name="submit" class="btn btn-danger">
      </form>
-</body>
+     <div class="col-6 mx-auto card py-3 px-3">
+        <ul class="list-group">
+            {% comment %} {% if submitbutton == 'submit' %} {% endcomment %}
+            <li class="list-group-item">Recipe name: {{ recipe_name }}</li>
+            <li class="list-group-item">Recipe description: {{ recipe_desc }}</li>
+            {% comment %} {% endif %} {% endcomment %}
+          </ul>
+
+     </div>   
+<div class="col-6 mx-auto card py-3 px-3">
+    <img src="/static/img/demo.jpg" alt="This is a burger" class="image">
+</div>
+<div class="col-6 mx-auto card py-3 px-3">
+    <video controls>
+        <source src="/static/videos/recipe.mp4" type="video/mp4">
+      </video>
+</div>
+
 {% endblock %}
