--- a/PostApp/core/templates/base.html
+++ b/PostApp/core/templates/base.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Bootstrap demo</title>
   </head>
-  <body>
+  <body class="bg-dark">
     {% block start %}
     {% endblock %}
   
