--- a/PostApp/core/templates/home/form.html
+++ b/PostApp/core/templates/home/form.html
@@ -1,6 +1,7 @@
 {% extends "form-base.html" %}
 
 {% block start %}
+<!-- New post form -Start  -->
 <form action="{% url 'form' %}" class="container py-4 px-5 bg-dark border-dark rounded text-light" method="post" enctype="multipart/form-data">
      <h5>New Post</h5>
      <hr>
@@ -11,11 +12,9 @@
      </div>
      <div class="mb-3">
           <label for="formFile" class="form-label">Upload new picture</label>
-          <!-- Fixed the input field for file upload -->
           <input class="form-control bg-dark text-light" name="image" type="file" id="formFile">
      </div>
      <button type="submit" class="btn btn-danger w-100" name="submit">Upload</button>
 </form>
-
-
+<!-- New post form -End  -->
 {% endblock %}
