--- a/PostApp/core/templates/home/index.html
+++ b/PostApp/core/templates/home/index.html
@@ -12,9 +12,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <form class="d-flex mt-5" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" style="border-radius: 100px;">
-                    <button class="btn btn-dark rounded-circle border-light" type="submit"><i class="ri-search-line"></i></button>
+                <form class="d-flex mt-5" role="search" action="search/" method="get">
+                    {% csrf_token %}
+                    <input class="form-control me-2" type="search" name="query" id="search" placeholder="Search" aria-label="Search" style="border-radius: 100px;">
+                    <button class="btn btn-dark rounded-circle border-light" type="submit" name="search_query" id="search_query"><i class="ri-search-line"></i></button>
                   </form>
             </ul>
         </div>
@@ -27,6 +28,7 @@
     {% for post in db %}
     <!-- Post section -Start  -->
     <div class="col-lg-6 col-md-8 mx-auto card py-3 bg-dark rounded-0">
+        <div class="px-2">
         <span class="text-light">
             <i class="ri-pushpin-fill"></i> {{post.date}}
         </span>
@@ -35,6 +37,7 @@
                 {{ post.caption }}
             </figcaption>
         </div>
+    </div>
         <!-- Accessing image attribute of each post object -->
         {% if post.image %}
         <img src="{{ post.image.url }}" alt="This is a burger" class="image rounded img-fluid rounded-0">
