--- a/PostApp/core/templates/home/form.html
+++ b/PostApp/core/templates/home/form.html
@@ -1,4 +1,5 @@
 {% extends "form-base.html" %}
+{% include "profile.html" %} 
 
 {% block start %}
 <!-- New post form -Start  -->
@@ -6,6 +7,15 @@
      <h5>New Post</h5>
      <hr>
      {% csrf_token %}
+   
+    {% comment %} {% for profile in all_ %}
+      <!-- This will output the profile object for debugging purposes -->
+     <div class="mb-3">
+         <label for="formFile" class="form-label">User ID</label>
+         <span class="form-control bg-dark text-light"id="formFile">{{profile.username}}</span>
+     </div>
+    
+ {% endfor %}  {% endcomment %}
      <div class="mb-3">
           <label for="exampleFormControlTextarea1" class="form-label">Caption</label>
           <textarea class="form-control bg-dark text-light" name="caption" id="exampleFormControlTextarea1" rows="3">{{caption}}</textarea>
