--- a/PostApp/core/static/css/style.css
+++ b/PostApp/core/static/css/style.css
@@ -17,6 +17,36 @@
      color: white;
      text-align: center;
    }
+   body {
+     background-color: #f8f9fa;
+ }
+ 
+ form {
+     max-width: 100%;
+ }
+ 
+ @media (max-width: 767.98px) {
+     .container {
+         padding-left: 15px;
+         padding-right: 15px;
+     }
+ 
+     form {
+         padding: 20px;
+     }
+ }
+ 
+ h2 {
+     font-size: 1.5rem;
+     font-weight: 500;
+     color: #495057;
+ }
+ 
+ .btn {
+     padding: 0.75rem;
+     font-size: 1rem;
+ }
+ 
   
  
 
